--- a/css/tarteaucitron.css
+++ b/css/tarteaucitron.css
@@ -68,10 +68,6 @@ div#tarteaucitronServices {
   outline: 0px solid slategrey;
 }
 
-div#tarteaucitronServices {
-  box-shadow: 0 0 35px #575757;
-}
-
 /***
  * Responsive layout for the control panel
  */
@@ -155,7 +151,7 @@ div#tarteaucitronServices {
   margin: auto;
 }
 #tarteaucitronRoot button#tarteaucitronBack {
-  background: #eee;
+  background: rgba(0, 0, 0, 0.75);
 }
 
 #tarteaucitron .clear {
@@ -215,13 +211,13 @@ div#tarteaucitronServices {
 #tarteaucitronRoot .tarteaucitronH1 {
   font-size: 1.5em;
   text-align: center;
-  color: #fff;
+  color: #212529;
   margin: 15px 0 28px;
 }
 #tarteaucitronRoot .tarteaucitronH2 {
   display: inline-block;
   margin: 12px 0 0 10px;
-  color: #fff;
+  color: #212529;
 }
 
 #tarteaucitronCookiesNumberBis.tarteaucitronH2 {
@@ -256,15 +252,15 @@ div#tarteaucitronServices {
 }
 #tarteaucitron .tarteaucitronBorder {
   background: #fff;
-  border: 2px solid #333;
+  border: 0;
   border-top: 0;
   height: auto;
   overflow: auto;
 }
 
 #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronClosePanelCookie {
-  background: #333333;
-  color: #fff;
+  background: white;
+  color: #212529;
   cursor: pointer;
   font-size: 12px;
   font-weight: 700;
@@ -277,8 +273,8 @@ div#tarteaucitronServices {
 }
 
 #tarteaucitron #tarteaucitronClosePanel {
-  background: #333333;
-  color: #fff;
+  background: white;
+  color: #212529;
   cursor: pointer;
   font-size: 12px;
   font-weight: 700;
@@ -294,10 +290,6 @@ div#tarteaucitronServices {
   font-size: 12px;
   margin: 15px auto 0;
   width: 80%;
-}
-
-.tarteaucitronSelfLink, #tarteaucitronAlertSmall #tarteaucitronCookiesListContainer #tarteaucitronCookiesList .tarteaucitronHidden, #tarteaucitron #tarteaucitronServices .tarteaucitronHidden {
-  background: rgba(51, 51, 51, 0.07);
 }
 
 a.tarteaucitronSelfLink {
@@ -328,8 +320,8 @@ a.tarteaucitronSelfLink {
   background: #333;
 }
 
-#tarteaucitron #tarteaucitronServices .tarteaucitronTitle button, #tarteaucitron #tarteaucitronInfo {
-  color: #fff;
+#tarteaucitron #tarteaucitronServices .tarteaucitronTitle button {
+  color: white;
   display: inline-block;
   font-size: 14px;
   font-weight: 700;
@@ -337,10 +329,10 @@ a.tarteaucitronSelfLink {
   padding: 5px 20px;
   text-align: left;
   width: auto;
-  background: #333;
+  background: blue;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronDetails {
-  color: #fff;
+  color: white;
   display: inline-block;
   font-size: 14px;
   font-weight: 700;
@@ -348,10 +340,10 @@ a.tarteaucitronSelfLink {
   padding: 5px 20px;
   text-align: left;
   width: auto;
-  background: #333;
+  background: blue;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine .tarteaucitronName a, #tarteaucitron #tarteaucitronServices .tarteaucitronTitle a {
-  color: #fff;
+  color: white;
   font-weight: 500;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine .tarteaucitronName a:hover, #tarteaucitron #tarteaucitronServices .tarteaucitronTitle a:hover {
@@ -370,7 +362,7 @@ a.tarteaucitronSelfLink {
 }
 
 #tarteaucitron #tarteaucitronInfo, #tarteaucitron #tarteaucitronServices .tarteaucitronDetails {
-  color: #fff;
+  color: #212529;
   display: none;
   font-size: 12px;
   font-weight: 500;
@@ -380,37 +372,36 @@ a.tarteaucitronSelfLink {
   position: absolute;
   z-index: 2147483647;
 }
+#tarteaucitron #tarteaucitronServices .tarteaucitronDetails {
+  color: white;
+}
 #tarteaucitron #tarteaucitronInfo a {
-  color: #fff;
+  color: #212529;
   text-decoration: underline;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine {
-  background: rgba(51, 51, 51, 0.1);
-  border-left: 5px solid transparent;
   margin: 0;
   overflow: hidden;
   padding: 15px 5px;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine:hover {
-  background: rgba(51, 51, 51, 0.2);
+  background: white;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronIsAllowed {
-  border-color: #1B870B;
+  border-color: green;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronIsDenied {
-  border-color: #9C1A1A;
+  border-color: red;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine {
-  background: #333;
-  border: 3px solid #333;
-  border-left: 9px solid #333;
-  border-top: 5px solid #333;
+  background: white;
+  border: 0;
   margin-bottom: 0;
   margin-top: 21px;
   position: relative;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine:hover {
-  background: #333;
+  background: white;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronMainLine .tarteaucitronName {
   margin-left: 15px;
@@ -440,7 +431,6 @@ a.tarteaucitronSelfLink {
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronAllow, #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronAsk .tarteaucitronDeny {
   background: gray;
-  border-radius: 4px;
   color: #fff;
   cursor: pointer;
   display: inline-block;
@@ -453,7 +443,6 @@ a.tarteaucitronSelfLink {
 
 .tac_activate .tarteaucitronAllow {
   background: gray;
-  border-radius: 4px;
   color: #fff;
   cursor: pointer;
   display: inline-block;
@@ -465,18 +454,18 @@ a.tarteaucitronSelfLink {
 }
 
 #tarteaucitron #tarteaucitronServices #tarteaucitronAllAllowed.tarteaucitronIsSelected {
-  background-color: #1B870B;
+  background-color: green;
   opacity: 1;
 }
 #tarteaucitron #tarteaucitronServices #tarteaucitronAllDenied.tarteaucitronIsSelected {
-  background-color: #9C1A1A;
+  background-color: red;
   opacity: 1;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronIsAllowed .tarteaucitronAllow {
-  background-color: #1B870B;
+  background-color: green;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine.tarteaucitronIsDenied .tarteaucitronDeny {
-  background-color: #9C1A1A;
+  background-color: red;
 }
 #tarteaucitron #tarteaucitronServices .tarteaucitronLine .tarteaucitronName .tarteaucitronListCookies {
   color: #333;
@@ -564,7 +553,6 @@ a.tarteaucitronSelfLink {
 
 #tarteaucitronPercentage {
   background: #0A0 !important;
-  box-shadow: 0 0 2px #fff, 0 1px 2px #555;
   height: 5px;
   left: 0;
   position: fixed;
@@ -616,13 +604,13 @@ a.tarteaucitronSelfLink {
   width: 0%;
 }
 #tarteaucitronAlertSmall #tarteaucitronManager #tarteaucitronDot #tarteaucitronDotGreen {
-  background-color: #1B870B;
+  background-color: green;
 }
 #tarteaucitronAlertSmall #tarteaucitronManager #tarteaucitronDot #tarteaucitronDotYellow {
   background-color: #FBDA26;
 }
 #tarteaucitronAlertSmall #tarteaucitronManager #tarteaucitronDot #tarteaucitronDotRed {
-  background-color: #9C1A1A;
+  background-color: red;
 }
 #tarteaucitronAlertSmall #tarteaucitronCookiesNumber {
   background: rgba(255, 255, 255, 0.2);
@@ -719,7 +707,7 @@ a.tarteaucitronSelfLink {
   color: #fff;
 }
 .tac_activate .tac_float .tarteaucitronAllow {
-  background-color: #1B870B;
+  background-color: green;
   display: inline-block;
 }
 
@@ -755,9 +743,6 @@ div#tarteaucitronInfo {
   padding: 15px 0 !important;
   margin: -10px auto 40px !important;
   font-size: 1em !important;
-  border-bottom: 1px solid;
-  border-top: 1px solid;
-  border-color: #555;
 }
 
 a.tarteaucitronSelfLink {
@@ -777,6 +762,53 @@ a.tarteaucitronSelfLink {
 
 span.tarteaucitronTitle.tarteaucitronH3 {
   margin-top: 12px !important;
+}
+
+div#tarteaucitronAlertBig.tarteaucitronAlertBigModal {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  z-index: 1000;
+  box-sizing: border-box;
+  padding: 0 !important;
+  touch-action: none !important;
+  pointer-events: all !important;
+}
+div#tarteaucitronAlertBig.tarteaucitronAlertBigModal .tarteaucitronAlertWrap {
+  width: 90%;
+  max-width: 500px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  padding: 40px 30px 20px !important;
+  box-sizing: border-box;
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  touch-action: manipulation !important;
+  pointer-events: all !important;
+}
+div#tarteaucitronAlertBig.tarteaucitronAlertBigModal .tarteaucitronAlertWrap #tarteaucitronDisclaimerAlert {
+  line-height: 18px !important;
+  font-size: 14px !important;
+  color: #212529;
+  margin: 0 0 30px !important;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+div#tarteaucitronAlertBig.tarteaucitronAlertBigModal .tarteaucitronAlertWrap #tarteaucitronPersonalize {
+  margin: 0;
+  margin-bottom: 20px;
+}
+div#tarteaucitronAlertBig.tarteaucitronAlertBigModal .tarteaucitronAlertWrap #tarteaucitronCloseAlert {
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=tarteaucitron.css.map */
